--- a/Nhom3.WebApi/Nhom3.WebApi.csproj
+++ b/Nhom3.WebApi/Nhom3.WebApi.csproj
@@ -268,7 +268,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Api\Scripts\Swagger-Custom.js" />
+    <EmbeddedResource Include="Api\Scripts\Swagger-Custom.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
